<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/tekstUpit"
        android:layout_width="273dp"
        android:layout_height="44dp"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp" />

    <Spinner
        android:id="@+id/sKategorije"
        android:layout_width="277dp"
        android:layout_height="37dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="177dp" />

    <Spinner
        android:id="@+id/sRezultat"
        android:layout_width="274dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="225dp"
        android:visibility="visible" />

    <Button
        android:id="@+id/dRun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:text="@string/Pretraga" />

    <Button
        android:id="@+id/dPovratak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="71dp"
        android:text="@string/Nazad" />

    <Button
        android:id="@+id/dAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="141dp"
        android:text="@string/DodajKnjiguOnline" />

</RelativeLayout>