<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/tekstUpit"
        android:layout_width="193dp"
        android:layout_height="44dp"

        android:layout_alignLeft="@+id/dKategorije"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/dKategorije"
        android:layout_marginTop="80dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/dPretraga2"
        android:layout_width="115dp"
        android:layout_height="41dp"
        android:layout_alignBaseline="@+id/tekstUpit"
        android:layout_alignBottom="@+id/tekstUpit"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:text="@string/Pretraga"
        android:visibility="invisible" />

    <Button
        android:id="@+id/dDodajKategoriju2"
        android:layout_width="115dp"
        android:layout_height="41dp"


        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/dDodajKnjigu"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:text="dKategorija"
        android:visibility="invisible" />

    <ListView
        android:id="@+id/listaAutori"
        android:layout_width="275dp"
        android:layout_height="260dp"
        android:layout_below="@id/dDodajKategoriju2"
        android:visibility="gone">

    </ListView>

    <Button
        android:id="@+id/dAutori"
        android:layout_width="115dp"
        android:layout_height="41dp"


        android:layout_alignLeft="@+id/dPretraga2"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/dPretraga2"
        android:layout_marginTop="14dp"
        android:text="@string/Autori" />

    <Button
        android:id="@+id/dKategorije"
        android:layout_width="115dp"
        android:layout_height="41dp"
        android:layout_alignBaseline="@+id/dAutori"
        android:layout_alignBottom="@+id/dAutori"
        android:layout_above="@id/dDodajKategoriju2"
        android:layout_alignLeft="@+id/dDodajKategoriju2"
        android:layout_alignStart="@+id/dDodajKategoriju2"
        android:text="@string/Kategroije" />

    <EditText
        android:id="@+id/tekstPretraga"
        android:layout_width="193dp"
        android:layout_height="44dp"

        android:layout_alignLeft="@+id/dKategorije"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/dKategorije"
        android:layout_marginTop="80dp"
        android:hint="Kategorija" />

    <Button
        android:id="@+id/dPretraga"
        android:layout_width="115dp"
        android:layout_height="41dp"
        android:layout_alignBaseline="@+id/tekstUpit"
        android:layout_alignBottom="@+id/tekstUpit"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:text="@string/Pretraga" />

    <Button
        android:id="@+id/dDodajKnjigu"
        android:layout_width="115dp"

        android:layout_height="41dp"

        android:layout_alignLeft="@+id/dPretraga2"
        android:layout_alignStart="@+id/dPretraga2"
        android:layout_below="@+id/dPretraga2"
        android:layout_marginTop="31dp"
        android:text="@string/Dknjiga" />

    <Button
        android:id="@+id/dDodajKategoriju"
        android:layout_width="115dp"
        android:layout_height="41dp"


        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/dDodajKnjigu"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/DKategorija" />

    <ListView
        android:id="@+id/listaKategorija"
        android:layout_width="275dp"
        android:layout_height="260dp"
        android:layout_below="@id/dDodajKategoriju2"
        android:visibility="visible">

    </ListView>

    <Button
        android:id="@+id/dDodajOnline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="DodajKnjiguOnline" />

</RelativeLayout>